@@ -7187,7 +7187,9 @@ name|responseHeader
 operator|.
 name|get
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 argument_list|)
 condition|)
@@ -7645,7 +7647,9 @@ argument_list|()
 operator|.
 name|get
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 operator|==
 literal|null
@@ -7660,7 +7664,9 @@ argument_list|()
 operator|.
 name|add
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|,
 name|Boolean
 operator|.
