@@ -256,6 +256,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|response
+operator|.
+name|SolrQueryResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|search
 operator|.
 name|Grouping
@@ -889,7 +902,9 @@ argument_list|()
 operator|.
 name|get
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 operator|==
 literal|null
@@ -904,7 +919,9 @@ argument_list|()
 operator|.
 name|add
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|,
 name|Boolean
 operator|.
