@@ -929,7 +929,9 @@ argument_list|()
 operator|.
 name|getBooleanArg
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1317,7 +1319,9 @@ argument_list|()
 operator|.
 name|getBooleanArg
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 argument_list|)
 expr_stmt|;
