@@ -193,6 +193,28 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testResponseHeaderPartialResults
+specifier|public
+name|void
+name|testResponseHeaderPartialResults
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertEquals
+argument_list|(
+literal|"SolrQueryResponse.RESPONSE_HEADER_PARTIAL_RESULTS_KEY value changed"
+argument_list|,
+literal|"partialResults"
+argument_list|,
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testValues
 specifier|public
 name|void
