@@ -1464,7 +1464,9 @@ name|responseHeader
 operator|.
 name|get
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 argument_list|)
 condition|)
@@ -1924,7 +1926,9 @@ argument_list|()
 operator|.
 name|add
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|,
 name|Boolean
 operator|.
@@ -3260,7 +3264,9 @@ name|responseHeader
 operator|.
 name|get
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|)
 argument_list|)
 condition|)
@@ -3762,7 +3768,9 @@ argument_list|()
 operator|.
 name|add
 argument_list|(
-literal|"partialResults"
+name|SolrQueryResponse
+operator|.
+name|RESPONSE_HEADER_PARTIAL_RESULTS_KEY
 argument_list|,
 name|Boolean
 operator|.
